<resources>
    <string name="app_name">OrderFood</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="idFood">food id:</string>
    <string name="hint_id">nhập id</string>
    <string name="foodName">Tên món:</string>
    <string name="hintFoodName">nhập tên food</string>
    <string name="moTaFood">Mô tả:</string>
    <string name="supervisor_profile_choose_image_title">Hãy chọn 1 ảnh</string>
</resources>